--- a/nginx-roboshop.conf
+++ b/nginx-roboshop.conf
@@ -7,7 +7,7 @@ location /images/ {
 location /api/catalogue/ { proxy_pass http://172.31.87.156:8080/; }
 location /api/user/ { proxy_pass http://172.31.95.81:8080/; }
 location /api/cart/ { proxy_pass http://172.31.83.208:8080/; }
-location /api/shipping/ { proxy_pass http://localhost:8080/; }
+location /api/shipping/ { proxy_pass http://172.31.90.108:8080/; }
 location /api/payment/ { proxy_pass http://localhost:8080/; }
 
 location /health {
