--- a/shipping.service
+++ b/shipping.service
@@ -3,8 +3,8 @@ Description=Shipping Service
 
 [Service]
 User=roboshop
-Environment=CART_ENDPOINT=<CART-SERVER-IPADDRESS>:8080
-Environment=DB_HOST=<MYSQL-SERVER-IPADDRESS>
+Environment=CART_ENDPOINT=172.31.83.208:8080
+Environment=DB_HOST=172.31.80.28
 ExecStart=/bin/java -jar /app/shipping.jar
 SyslogIdentifier=shipping
 
