--- a/nginx-roboshop.conf
+++ b/nginx-roboshop.conf
@@ -4,11 +4,11 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://172.31.87.156:8080/; }
-location /api/user/ { proxy_pass http://172.31.95.81:8080/; }
-location /api/cart/ { proxy_pass http://172.31.83.208:8080/; }
-location /api/shipping/ { proxy_pass http://172.31.90.108:8080/; }
-location /api/payment/ { proxy_pass http://172.31.88.8:8080/; }
+location /api/catalogue/ { proxy_pass http://catalogue.kr7348202.online:8080/; }
+location /api/user/ { proxy_pass http://user.kr7348202.online:8080/; }
+location /api/cart/ { proxy_pass http://cart.kr7348202.online:8080/; }
+location /api/shipping/ { proxy_pass http://shipping.kr7348202.online:8080/; }
+location /api/payment/ { proxy_pass http://payment.kr7348202.online:8080/; }
 
 location /health {
   stub_status on;
