--- a/payment.service
+++ b/payment.service
@@ -4,11 +4,11 @@ Description=Payment Service
 [Service]
 User=root
 WorkingDirectory=/app
-Environment=CART_HOST=172.31.83.208
+Environment=CART_HOST=cart.kr7348202.online
 Environment=CART_PORT=8080
-Environment=USER_HOST=172.31.95.81
+Environment=USER_HOST=user.kr7348202.online
 Environment=USER_PORT=8080
-Environment=AMQP_HOST=172.31.95.218
+Environment=AMQP_HOST=rabbitmq.kr7348202.online
 Environment=AMQP_USER=roboshop
 Environment=AMQP_PASS=roboshop123
 
