--- a/user.service
+++ b/user.service
@@ -4,7 +4,7 @@ Description = User Service
 User=roboshop
 Environment=MONGO=true
 Environment=REDIS_HOST=172.31.85.7
-Environment=MONGO_URL="mongodb://172.31.89.76:27017/users"
+Environment=MONGO_URL="mongodb://mongodb.kr7348202.online:27017/users"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
